Changelog 5.1.1 (2022-06-10)
----------------------------
* Added support for Spring Framework 6.0 in Spring WebClientTest module
* Overwrite responseLogDetail when merging ResponseSpecificationImpl (issue 1493) (thanks to petur for pull request)
* Fix: rootPath does not allow chaining paths with leading operators (issue 1577) (thanks to Roman Mitasov for pull request)
* Fix: body(InputStream) does not work (issue 1480) (thanks to fedinskiy for pull request)
* Fix: jsonPath - return null if list(array) does not exists in input document (issue 1544) (thanks to Oleksandr Kulychok for pull request)
* Fix: Re-added groovy package to package imports for OSGi support (issue 1567) (thanks to Steven Huypens for pull request)
* Fix: class cast exception in RequestPrinter with byte[] body (thanks to Andreas Grub for pull request)
* Upgraded gson from 2.6.2 to 2.9.0

Changelog 5.1.0 (2022-05-24)
----------------------------
* Upgrading kotlin to 1.6.21
* Moved package io.restassured.assertion to io.restassured.internal.assertion since the classes in this package should be internal.
  Not all files have been moved yet, but refactoring will continue in the next release.
* Added support for Spring Framework 6.0 and Jakarta API's in Spring MockMvc module.

Changelog 5.0.1 (2022-04-06)
----------------------------
* Fixed so that with RestAssuredHttpBuilder no longer requires ResponseSpecificationImpl but rather a FilterableResponseSpecification

Changelog 5.0.0 (2022-03-25)
----------------------------
* Breaking change: REST Assured now builds on Groovy 4!
* Excluded example projects from rest assured bom file (issue 1546)
* Updated jackson from version 2.11.1 to 2.13.2 (issue 1555)

Changelog 4.5.1 (2022-02-11)
----------------------------
* Fixed a bug in ObjectMapper that required JAXB/JakartaEE when this was not intended (issue 1542)

Changelog 4.5.0 (2022-01-21)
----------------------------