@@ -52,6 +52,15 @@ public interface FilterContext {
     boolean hasValue(String name);
 
     /**
+     * See if this filter context contain an entry with {@code name} equal to {@code value}.
+     *
+     * @param name  The name of the value
+     * @param value The value that the entry with {@code name} should be equal to.
+     * @return <code>true</code> if the value exists in this filter context and is equal to {@code value}, <code>false</code> otherwise.
+     */
+    boolean hasValue(String name, Object value);
+
+    /**
      * Send a request to the same request path and with the same request method as the original request.
      *
      * @param requestSender The response or request specification.
