@@ -1,3 +1,7 @@
+Changelog next version
+----------------------
+* Improved FilterContext used in Filters by adding the method FilterContext#hasValue(name, object). This makes it easier to check if a value exists _and_ is equal to the expect object.
+
 Changelog 5.1.1 (2022-06-10)
 ----------------------------
 * Added support for Spring Framework 6.0 in Spring WebClientTest module
